WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47420
Language tag in speech for HTML input elements postpatch
https://bugs.webkit.org/show_bug.cgi?id=47420
Summary
Language tag in speech for HTML input elements postpatch
Leandro Graciá Gil
Reported
2010-10-08 09:25:54 PDT
This is the last part of a 4-sided patch. The patch proposed for bug
https://bugs.webkit.org/show_bug.cgi?id=47089
introduces a few temporary fixes required to avoid crashing chromium. This patch removes them, and will be applied after all the other chromium parts. For more information on this 4-sided patch visit: - 1st part:
http://codereview.chromium.org/3615005/show
- 2nd part:
https://bugs.webkit.org/show_bug.cgi?id=47089
- 3rd part:
http://codereview.chromium.org/3595018/show
Attachments
Patch
(4.78 KB, patch)
2010-10-13 05:32 PDT
,
Leandro Graciá Gil
no flags
Details
Formatted Diff
Diff
Patch
(5.07 KB, patch)
2010-10-29 08:48 PDT
,
Leandro Graciá Gil
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Leandro Graciá Gil
Comment 1
2010-10-13 05:32:18 PDT
Created
attachment 70601
[details]
Patch
Leandro Graciá Gil
Comment 2
2010-10-29 08:48:23 PDT
Created
attachment 72340
[details]
Patch
Satish Sampath
Comment 3
2010-10-29 08:51:20 PDT
Comment on
attachment 72340
[details]
Patch Looks good to me
Jeremy Orlow
Comment 4
2010-10-29 08:57:45 PDT
Comment on
attachment 72340
[details]
Patch r=me
Satish Sampath
Comment 5
2010-10-29 09:04:13 PDT
Comment on
attachment 72340
[details]
Patch Removing cq+ as the chromium side needs to roll past the previous webkit patch.
WebKit Commit Bot
Comment 6
2010-10-29 09:43:25 PDT
The commit-queue encountered the following flaky tests while processing
attachment 72340
[details]
: webarchive/test-link-rel-icon.html Please file bugs against the tests. These tests were authored by
ddkilzer@webkit.org
. The commit-queue is continuing to process your patch.
Leandro Graciá Gil
Comment 7
2010-11-01 05:44:15 PDT
Comment on
attachment 72340
[details]
Patch Chromium side patch landed. Now it should be safe to land this one.
Satish Sampath
Comment 8
2010-11-01 05:56:28 PDT
Comment on
attachment 72340
[details]
Patch Clearing flags on attachment: 72340 Committed
r71019
: <
http://trac.webkit.org/changeset/71019
>
Satish Sampath
Comment 9
2010-11-01 05:56:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug