2010-11-01  Leandro Gracia Gil  <leandrogracia@google.com>

Reviewed by Jeremy Orlow.

        This is the last part of a 4-sided patch for the language attribute
        in speech text buttons. This patch removes what now is dead code
        and re-enables the layout test introduced by bug 47089.
        https://bugs.webkit.org/show_bug.cgi?id=47420

        * platform/chromium/test_expectations.txt:
2010-11-01  Leandro Gracia Gil  <leandrogracia@google.com>

        Reviewed by Jeremy Orlow.

        This is the last part of a 4-sided patch for the language attribute
        in speech text buttons. This patch removes what now is dead code
        and re-enables the layout test introduced by bug 47089.
        https://bugs.webkit.org/show_bug.cgi?id=47420

        * public/WebSpeechInputControllerMock.h:
        * src/WebSpeechInputControllerMockImpl.cpp:
        * src/WebSpeechInputControllerMockImpl.h:

Canonical link: https://commits.webkit.org/61517@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71019 268f45cc-cd09-0410-ab3c-d52691b4dbfc