WebKit/chromium/src/WebSpeechInputControllerMockImpl.h
@@ -64,10 +64,6 @@ public:
     // WebSpeechInputControllerMock methods.
     void setMockRecognitionResult(const WebString& result, const WebString& language);
 
-    // FIXME: this is a fix for a two-sided patch. Delete as soon as the chromium side is patched.
-    // Chromium patch not uploaded yet, but will depend on http://codereview.chromium.org/3615005/show patch.
-    void setMockRecognitionResult(const WebString& result);
-
 private:
     OwnPtr<WebCore::SpeechInputClientMock> m_webcoreMock;
     WebSpeechInputListener* m_listener;
